--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,23 @@ html {
 
   z-index: -1;
 }
+
+h1 {
+  font-family: "Dancing Script", cursive;
+  font-size: 80px;
+  margin-bottom: 30px;
+  text-shadow: 2px 2px cyan;
+  text-align: center;
+  padding: 20px;
+}
+
+.spacing {
+  margin: 5px;
+}
+
+.quotesera-logo {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  margin: 0 auto;
+}
