--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ html {
 
 .banner-top {
   width: 100%;
+  height: 100%;
   top: 0;
   position: absolute;
   z-index: -1;
@@ -16,7 +17,7 @@ html {
   z-index: -1;
 }
 
-h1 {
+.editor-style {
   font-family: "Dancing Script", cursive;
   font-size: 80px;
   margin-bottom: 30px;
@@ -34,4 +35,27 @@ h1 {
   width: 200px;
   border-radius: 50%;
   margin: 0 auto;
+}
+
+.front-heading {
+  text-align: center;
+  color: white;
+  font-family: "Prompt", sans-serif;
+
+  text-shadow: 2px 2px #b6cebd;
+}
+
+.front-para {
+  text-align: center;
+  color: white;
+  font-family: "Prompt", sans-serif;
+  font-size: 20px;
+}
+
+.middle-align {
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+  justify-content: center; /* align horizontal */
+  align-items: center; /* align vertical */
 }
